infra/zarf/bulkhead-apps/manifests/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: bulkhead-gateway
  namespace: bulkhead
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - bulkhead.local
        - bulkhead.localhost
